[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/objects/ship_equipments/turrets/scenes/KE_Turret_T1.tscn" type="PackedScene" id=1]
[ext_resource path="res://user_interface/interactableUIs/interactableMonitor.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/objects/ship_equipments/turrets/scripts/minor_turret.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.06226

[node name="MinorTurret" type="Node2D"]
z_index = 1
script = ExtResource( 3 )

[node name="KE_Turret_T1" parent="." instance=ExtResource( 1 )]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 3 )
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="InteractableMonitor" parent="." instance=ExtResource( 2 )]

[node name="Label" parent="InteractableMonitor/NinePatchRect" index="1"]
text = "TUR"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="pressed" from="InteractableMonitor/NinePatchRect/TextureButton" to="." method="_on_TextureButton_pressed"]

[editable path="InteractableMonitor"]
